# cosmoscout-vr

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  CITATION.cff  CLA.md  CMakeLists.txt  CMakePresets.json  CMakePresets.json.license  CONTRIBUTING.md  CosmoScout VR.iss  CreatePlugin.ps1  LICENSE  LICENSE-3RD-PARTY.txt  LICENSE.md  LICENSE.txt  New-Plugin.ps1  README.md  clang-format.bat  clang-format.ps1  clang-format.sh  clang-tidy.ps1  clang-tidy.sh  cloc.sh  get_example_data.bat  get_example_data.sh  lcov.sh  make.bat  make.sh  make_debug.bat  make_debug.sh  make_externals.bat  make_externals.sh  make_externals_mingw.sh  make_release.bat  make_release.sh
config/base/: CMakeLists.txt
plugins/: CMakeLists.txt
plugins/csl-node-editor/: CMakeLists.txt  README.md
plugins/csl-ogc/: CMakeLists.txt  README.md
plugins/csl-tools/: CMakeLists.txt  README.md
plugins/csp-advanced-atmospheres/: CMakeLists.txt
plugins/csp-anchor-labels/: CMakeLists.txt  README.md
plugins/csp-animated-giant-planets/: CMakeLists.txt  README.md
plugins/csp-atmospheres/: CMakeLists.txt  README.md  REUSE.toml  tree-debug.frag
plugins/csp-cesium-renderer/: CMakeLists.txt
plugins/csp-coordinate-arrows/: CMakeLists.txt  README.md
plugins/csp-custom-web-ui/: CMakeLists.txt  README.md
plugins/csp-demo-node-editor/: CMakeLists.txt  README.md
plugins/csp-floor-grid/: CMakeLists.txt  README.md
plugins/csp-fly-to-locations/: CMakeLists.txt  README.md
plugins/csp-guide/: CMakeLists.txt  README.md
plugins/csp-guided-tour/: CMakeLists.txt  README.md
plugins/csp-lod-bodies/: CMakeLists.txt  README.md
plugins/csp-measurement-tools/: CMakeLists.txt  README.md
plugins/csp-minimap/: CMakeLists.txt  README.md
plugins/csp-orientation-tools/: CMakeLists.txt  README.md
plugins/csp-recorder/: CMakeLists.txt  README.md
plugins/csp-rings/: CMakeLists.txt  README.md
plugins/csp-satellites/: CMakeLists.txt  README.md
plugins/csp-sharad/: CMakeLists.txt  README.md
plugins/csp-simple-bodies/: CMakeLists.txt  README.md
plugins/csp-simple-objects/: CMakeLists.txt  LICENSE  README.md
plugins/csp-simple-wms-bodies/: CMakeLists.txt  README.md
plugins/csp-stars/: CMakeLists.txt  README.md
plugins/csp-timings/: CMakeLists.txt  README.md
plugins/csp-trajectories/: CMakeLists.txt  README.md
plugins/csp-user-study/: CMakeLists.txt  README.md
plugins/csp-virtual-satellite/: CMakeLists.txt  README.md
plugins/csp-visual-effects/: CMakeLists.txt  README.md
plugins/csp-visual-query/: CMakeLists.txt  README.md
plugins/csp-vr-accessibility/: CMakeLists.txt  README.md
plugins/csp-wcs-overlays/: CMakeLists.txt  README.md
plugins/csp-web-api/: CMakeLists.txt  README.md
plugins/csp-wfs-overlays/: CMakeLists.txt  README.md
plugins/csp-wms-overlays/: CMakeLists.txt  README.md
resources/: CMakeLists.txt
resources/gui/: .eslintignore  .eslintrc.js  calendar.html  cosmogui.html  cosmoscout.html  deletable_mark.html  footer.html  header.html  loading_screen.html  logo.html  notifications.html  package-lock.json  package.json  sidebar.html  statistics.html  statistics_graph.html  statusbar.html  timeline.html  timenavigation.html
resources/locations/: README.md  jupiter.csv  mars.csv  mercury.csv  moon.csv  moon.js  phobos.csv  venus.csv
resources/models/: IdeatoOrbit-rev01_all.glb  IdeatoOrbit-rev01_camera.glb  IdeatoOrbit-rev01_central.glb  IdeatoOrbit-rev01_double.glb  IdeatoOrbit-rev01_jetson.glb  VLEO_alt.glb  VLEO_centered.glb  vive.glb
resources/shaders/: computeLuminanceClassic.comp  computeLuminanceFast.comp  eclipseShadows.glsl  glare.comp  glareComposite.comp  tonemap.frag  tonemap.vert
resources/textures/: earthLimbLuminance.tif  earthShadow.hdr  earthShadow.tif  fallbackShadow.hdr  fallbackShadow.tif  fallbackShadow.tif.license  ioShadow.hdr  jupiterShadow.hdr  marsLimbLuminance.tif  marsShadow.hdr  marsShadow.tif  marsShadow.tif.license  moonShadow.hdr  phobosShadow.hdr
resources/transferfunctions/: BlackBody.json  BrBg.json  BuGn.json  BuRd.json  GnRp.json  Grayscale.json  GreenWhite.json  Heat.json  HeatLight.json  ILA_T  ILA_VMAG  RainbowDesaturated.json  RdPu.json  WhiteBlue.json
services/: CMakeLists.txt  cosmoscout_sink.py
src/: CMakeLists.txt
src/cosmoscout/: Application.cpp  Application.hpp  CMakeLists.txt  GetSelectionStateNode.cpp  GetSelectionStateNode.hpp  ObserverNavigationNode.cpp  ObserverNavigationNode.hpp  TimeControlNode.cpp  TimeControlNode.hpp  icon.rc  logger.cpp  logger.hpp  main.cpp  precompiled.pch  x11utils.cpp  x11utils.hpp
src/cs-audio/: AudioController.cpp  AudioController.hpp  AudioUtil.cpp  AudioUtil.hpp  CMakeLists.txt  OpenAlManager.cpp  OpenAlManager.hpp  Pipeline.cpp  Pipeline.hpp  Source.cpp  Source.hpp  SourceGroup.cpp  SourceGroup.hpp  SourceSettings.hpp  StreamingSource.cpp  StreamingSource.hpp  logger.cpp  logger.hpp  precompiled.pch  test_utils.hpp
src/cs-core/: AudioEngine.cpp  AudioEngine.hpp  CMakeLists.txt  DeepSpaceDot.cpp  DeepSpaceDot.hpp  DragNavigation.cpp  DragNavigation.hpp  EclipseShadowReceiver.cpp  EclipseShadowReceiver.hpp  GraphicsEngine.cpp  GraphicsEngine.hpp  GuiManager.cpp  GuiManager.hpp  InputManager.cpp  InputManager.hpp  PluginBase.cpp  PluginBase.hpp  Settings.cpp  Settings.hpp  SolarSystem.cpp  SolarSystem.hpp  TimeControl.cpp  TimeControl.hpp  cs-version.hpp.in  logger.cpp  logger.hpp  precompiled.pch
src/cs-graphics/: BRDFFactory.cpp  BRDFFactory.hpp  CMakeLists.txt  ClearHDRBufferNode.cpp  ClearHDRBufferNode.hpp  ColorMap.cpp  ColorMap.hpp  EclipseShadowMap.hpp  GlareMipMap.cpp  GlareMipMap.hpp  GlowMipMap.cpp  GlowMipMap.hpp  GltfLoader.cpp  GltfLoader.hpp  HDRBuffer.cpp  HDRBuffer.hpp  LuminanceMipMap.cpp  LuminanceMipMap.hpp  MouseRay.cpp  MouseRay.hpp  ObjLoader.cpp  ObjLoader.hpp  SetupGLNode.cpp  SetupGLNode.hpp  Shadows.cpp  Shadows.hpp  TextureLoader.cpp  TextureLoader.hpp  ToneMappingNode.cpp  ToneMappingNode.hpp  logger.cpp  logger.hpp  precompiled.pch
src/cs-gui/: CMakeLists.txt  GuiArea.cpp  GuiArea.hpp  GuiItem.cpp  GuiItem.hpp  gui.cpp  (+17 more)
(+1440 files in other folders)
