# ------------------------------------------------------------------------------------------------ #
#                                This file is part of CosmoScout VR                                #
#       and may be used under the terms of the MIT license. See the LICENSE file for details.      #
#                         Copyright: (c) 2019 German Aerospace Center (DLR)                        #
# ------------------------------------------------------------------------------------------------ #

add_subdirectory(csp-anchor-labels)
add_subdirectory(csp-atmospheres)
add_subdirectory(csp-fly-to-locations)
add_subdirectory(csp-lod-bodies)
add_subdirectory(csp-measurement-tools)
add_subdirectory(csp-rings)
add_subdirectory(csp-satellites)
add_subdirectory(csp-sharad)
add_subdirectory(csp-simple-bodies)
add_subdirectory(csp-stars)
add_subdirectory(csp-trajectories)