# ------------------------------------------------------------------------------------------------ #
#                                This file is part of CosmoScout VR                                #
#       and may be used under the terms of the MIT license. See the LICENSE file for details.      #
#                         Copyright: (c) 2019 German Aerospace Center (DLR)                        #
# ------------------------------------------------------------------------------------------------ #

add_subdirectory(cs-utils)
add_subdirectory(cs-core)
add_subdirectory(cs-graphics)
add_subdirectory(cs-gui)
add_subdirectory(cs-scene)
add_subdirectory(cosmoscout)
