# ------------------------------------------------------------------------------------------------ #
#                                This file is part of CosmoScout VR                                #
# ------------------------------------------------------------------------------------------------ #

# SPDX-FileCopyrightText: German Aerospace Center (DLR) <cosmoscout@dlr.de>
# SPDX-License-Identifier: MIT

add_subdirectory(cs-utils)
add_subdirectory(cs-core)
add_subdirectory(cs-graphics)
add_subdirectory(cs-gui)
add_subdirectory(cs-scene)
add_subdirectory(cosmoscout)
